Update branding to Jama with improved messaging
- Changed brand name to Jama across all components
- Updated hero headline to 'Community-Powered Business Funding'
- Improved responsive font sizing for better single-line display
- Widened hero container for better text flow
- Added 'Unleash Crypto Capital Efficiency' tagline
- Fixed image cropping to preserve top content (faces)

--- a/apps/web-rbf/.env.example
+++ b/apps/web-rbf/.env.example
@@ -2,12 +2,16 @@
 NEXT_PUBLIC_RPC_URL=https://sepolia.base.org
 NEXT_PUBLIC_FACTORY_ADDRESS=0x1234567890123456789012345678901234567890
 NEXT_PUBLIC_BUSINESS_REGISTRY_ADDRESS=0x2345678901234567890123456789012345678901
+NEXT_PUBLIC_USDC_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
 
 # The Graph Protocol
 NEXT_PUBLIC_SUBGRAPH_URL=https://api.studio.thegraph.com/query/[your-subgraph-id]/[subgraph-name]/[version]
 
 # Authentication
 NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id-here
+
+# Payment Configuration
+NEXT_PUBLIC_COINBASE_APP_ID=your-coinbase-app-id-here
 
 # Storage
 NEXT_PUBLIC_IPFS_GATEWAY=https://gateway.pinata.cloud/ipfs/
