--- a/apps/web-rbf/package.json
+++ b/apps/web-rbf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-rbf",
+  "name": "folkfund-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.0",
+    "@coinbase/cbpay-js": "^2.4.0",
     "@coinbase/onchainkit": "^0.38.16",
     "@heroicons/react": "^2.2.0",
     "@privy-io/react-auth": "^2.21.1",
     "@privy-io/wagmi": "^1.0.5",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.80.7",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
@@ -26,6 +28,7 @@
     "permissionless": "^0.2.52",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "stripe": "^18.5.0",
     "viem": "latest",
     "wagmi": "^2.16.1"
   },
